# cmake-library

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
cmake/: UpdateSubmodules.cmake
src/: library.h
test/: cmake_library_test.cpp
